<resources>
    <string name="app_name">Gym Application Final Project</string>
    <string name="abs_on_the_model"> This are the abs </string>
    <string name="base_model"> This is the base model</string>
    <string name="model_front_left_forearm"> this is the left forearm on the front of the body</string>
    <string name="model_front_left_shoulder"> this is the left shoulder on the front of the body</string>
    <string name="model_front_right_forearm"> this is the right forearm on the front of the body</string>
    <string name="model_front_right_shoulder"> this is the right shoulder on the front of the body</string>
    <string name="model_left_bicep"> this is the left bicep</string>
    <string name="model_left_oblique"> this is the left oblique</string>
    <string name="model_left_quad"> this is the left quad</string>
    <string name="model_pecs"> these are the pecs</string>
    <string name="model_right_bicep"> this is the right bicep</string>
    <string name="model_right_oblique"> this is the right oblique</string>
    <string name="model_right_quad"> this is the right quad</string>
    <string name="base_back_model"> this is the base model from the back</string>
    <string name="model_back_left_forearm"> this is the left forearm</string>
    <string name="model_back_left_shoulder"> this is the left shoulder</string>
    <string name="model_back_right_forearm"> these are the right forearm</string>
    <string name="model_back_right_shoulder"> this is the right shoulder</string>
    <string name="model_left_trapezius"> this is the left trap</string>
    <string name="model_left_triceps"> this is the left triceps</string>
    <string name="model_upper_back"> this is the upper back</string>
    <string name="model_right_trapezius"> this is the right trap</string>
    <string name="model_right_triceps"> this is the right triceps</string>
    <string name="model_middle_back"> this is the middle back</string>
    <string name="model_glutes"> this is the glutes</string>
    <string name="model_left_hamstring"> this is the left hamstring</string>
    <string name="model_right_hamstring"> this is the right hamstring</string>
    <string name="ui_bottom_border"> this is the bottom border</string>
    <string name="ui_homepage_button"> this is the homepage button</string>
    <string name="ui_workout_list_button"> this is the workout list button</string>
    <string name="ui_user_info_button"> this is the user information button</string>
    <string name="ui_help_button"> this is the help button</string>
    <string name="abs_clicked"> You clicked abs</string>
    <string name="forearm_clicked"> You clicked the forearms</string>
    <string name="shoulder_clicked"> You clicked the shoulders</string>
    <string name="bicep_clicked"> You clicked the biceps</string>
    <string name="oblique_clicked"> You clicked the obliques</string>
    <string name="quad_clicked"> You clicked the quadriceps</string>
    <string name="pecs_clicked"> You clicked the pectorals</string>
    <string name="triceps_clicked"> You clicked the triceps</string>
    <string name="traps_clicked"> You clicked the traps</string>
    <string name="upper_back_clicked"> You clicked the upper back</string>
    <string name="middle_back_clicked"> You clicked the middle back</string>
    <string name="glutes_clicked"> You clicked the glutes</string>
    <string name="hamstrings_clicked"> You clicked the hamstrings</string>
    <string name="homepage_button_clicked"> Homepage Open</string>
    <string name="workout_list_button_clicked"> You clicked the workout list button</string>
    <string name="user_info_button_clicked"> You clicked the user info button</string>
    <string name="help_button_clicked"> You clicked the help button</string>
    <string name="home">Home</string>
    <string name="workoutlist">workout List</string>
    <string name="user_info">User Info</string>
    <string name="title_activity_biceps_screen">BicepsScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="abs_scissors">Abs Scissors</string>
    <string name="blank">this is the abs scissors description</string>
    <string name="this_is_the_abs_scissors_image">this is the abs scissors image</string>
    <string name="the_back_button_for_the_abs_scissors_page">the back button for the abs scissors page</string>
    <string name="search">Search</string>
    <string name="exercise_equipment">Exercise Equipment</string>
    <string name="deltoids_exercise_list">Deltoids Exercise List</string>
    <string name="forearms_exercise_list">Forearms Exercise List</string>
    <string name="chest_exercise_list">Chest Exercise List</string>
    <string name="biceps_exercise_list">Biceps Exercise List</string>
    <string name="abs_exercise_list">Abs Exercise List</string>
    <string name="upper_back_exercise_list">Upper Back Exercise List</string>
    <string name="triceps_exercise_list">Triceps Exercise List</string>
    <string name="trapezius_exercise_list">Trapezius Exercise List</string>
    <string name="obliques_exercise_list">Obliques Exercise List</string>
    <string name="quadriceps_exercise_list">Quadriceps Exercise List</string>
    <string name="middle_back_exercise_list">Middle Back Exercise List</string>
    <string name="hamstrings_exercise_list">Hamstrings Exercise List</string>
    <string name="glutes_exercise_list">Glutes Exercise List</string>
    <string name="description_fragment">Workout Description Fragment</string>
    <string name="tips_fragment">Workout Tips Fragment</string>
    <string name="extra_fragment">Workout Extras Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="abs_scissors_descriprion_line_1">Lie on your back on the mat with your legs extended out in front of you.</string>
    <string name="abs_scissors_description_line_2">Place your arms by your sides, palms down. You can also place your hands under your glutes below the small of your back, palms pressing into the floor.</string>
    <string name="abs_scissors_description_line_3">Engage your core by pressing your lower back into the mat and tucking your pelvis. Maintain this position during the entire movement</string>
    <string name="abs_scissors_description_line_4">Lift both legs off the ground about 6 to 12 inches from the starting position (in this case, the floor) or about a 45-degree angle.</string>
    <string name="abs_Scissors_description_line_5">With your core tight and neck relaxed, lower one leg toward the floor as you lift the other leg up. This is the start of the “scissoring” motion</string>
    <string name="abs_scissors_description_line_6">Continue the scissoring motion by slowly switching your legs up and down for the recommended amount of repetitions.</string>
    <string name="abs_scissors_description_line_7">Perform 2 sets of 12 to 20 repetitions. Each leg scissoring counts as one rep.</string>
    <string name="this_is_the_back_button">this is the back button</string>
    <string name="bicycle_crunch">Bicycle Crunch</string>
    <string name="this_is_the_bicycle_crunch_image">this is the bicycle crunch image</string>
    <string name="abs_scissors_extras_line1">For an easier go at the scissor kicks exercise, try:</string>
    <string name="abs_scissors_tips_line1">Keep your arms stationary throughout the entire move. Your arms serve as stability. They should not be used as momentum.</string>
</resources>